OCI Config instance principal support.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>